# haltia_test

./: README.md  pubspec.yaml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/cpp/: CMakeLists.txt  whisper_flutter_plus.cpp
lib/: main.dart
lib/chat_page/: chat_page.dart  chat_page_bloc.dart  chat_page_events.dart  chat_page_states.dart  chat_user.dart
lib/chat_page/input_widget/: input_widget.dart  input_widget_bloc.dart  input_widget_commands.dart  input_widget_events.dart  input_widget_states.dart
lib/drift/: drift_database.dart  drift_database.g.dart  drift_messages.dart
lib/fake_replies/: fake_replies_service.dart
lib/models/: user.dart
lib/repositories/: messages_repository.dart  user_repository.dart
lib/storage/: messages_drift_storage.dart  messages_memory_storage.dart  storage.dart
lib/transcribe/: transcribe_service.dart  transcribe_service_mock.dart  whisper_transcribe_service.dart
lib/utils/: extended_bloc.dart  extended_bloc_builder.dart  extended_bloc_consumer.dart  inkwell.dart  tracer.dart
lib/whisper/: download_model.dart  whisper_flutter_plus.dart  whisper_model_downloader.dart  whisper_models.dart  whisper_result.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+10 files in other folders)
